--- a/planning-ahead.html
+++ b/planning-ahead.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard" />
 
 
-<meta name="date" content="2021-07-15" />
+<meta name="date" content="2021-07-16" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -269,7 +269,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 </ul></li>
 <li class="part"><span><b>III Step 2: Prototype</b></span></li>
-<li class="chapter" data-level="8" data-path="setting-up-for-success.html"><a href="setting-up-for-success.html"><i class="fa fa-check"></i><b>8</b> Setting Up for Success with <code>{golem}</code></a><ul>
+<li class="chapter" data-level="8" data-path="setting-up-for-success.html"><a href="setting-up-for-success.html"><i class="fa fa-check"></i><b>8</b> Setting up for Success with <code>{golem}</code></a><ul>
 <li class="chapter" data-level="8.1" data-path="setting-up-for-success.html"><a href="setting-up-for-success.html#create-a-golem"><i class="fa fa-check"></i><b>8.1</b> Create a <code>{golem}</code></a></li>
 <li class="chapter" data-level="8.2" data-path="setting-up-for-success.html"><a href="setting-up-for-success.html#setting-things-up-with-dev01_start.r"><i class="fa fa-check"></i><b>8.2</b> Setting things up with <code>dev/01_start.R</code></a><ul>
 <li class="chapter" data-level="8.2.1" data-path="setting-up-for-success.html"><a href="setting-up-for-success.html#fill-the-description-and-set-options"><i class="fa fa-check"></i><b>8.2.1</b> Fill the DESCRIPTION and set options</a></li>
@@ -280,7 +280,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 <li class="chapter" data-level="8.3" data-path="setting-up-for-success.html"><a href="setting-up-for-success.html#setting-infrastructure-for-prototyping"><i class="fa fa-check"></i><b>8.3</b> Setting infrastructure for prototyping</a><ul>
 <li class="chapter" data-level="8.3.1" data-path="setting-up-for-success.html"><a href="setting-up-for-success.html#add-modules-in-dev02_dev.r"><i class="fa fa-check"></i><b>8.3.1</b> Add modules in <code>dev/02_dev.R</code></a></li>
-<li class="chapter" data-level="8.3.2" data-path="setting-up-for-success.html"><a href="setting-up-for-success.html#add-css-and-js-files"><i class="fa fa-check"></i><b>8.3.2</b> Add CSS and JS Files</a></li>
+<li class="chapter" data-level="8.3.2" data-path="setting-up-for-success.html"><a href="setting-up-for-success.html#add-css-and-js-files"><i class="fa fa-check"></i><b>8.3.2</b> Add CSS and JS files</a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="9" data-path="building-ispum-app.html"><a href="building-ispum-app.html"><i class="fa fa-check"></i><b>9</b> Building an “ipsum-app”</a><ul>
@@ -332,7 +332,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="12.1.3" data-path="version-control.html"><a href="version-control.html#about-branches"><i class="fa fa-check"></i><b>12.1.3</b> About branches</a></li>
 <li class="chapter" data-level="12.1.4" data-path="version-control.html"><a href="version-control.html#issues"><i class="fa fa-check"></i><b>12.1.4</b> Issues</a></li>
 </ul></li>
-<li class="chapter" data-level="12.2" data-path="version-control.html"><a href="version-control.html#git-integration"><i class="fa fa-check"></i><b>12.2</b> Git integration</a><ul>
+<li class="chapter" data-level="12.2" data-path="version-control.html"><a href="version-control.html#git-integration"><i class="fa fa-check"></i><b>12.2</b> <code>Git</code> integration</a><ul>
 <li class="chapter" data-level="12.2.1" data-path="version-control.html"><a href="version-control.html#with-rstudio"><i class="fa fa-check"></i><b>12.2.1</b> With RStudio</a></li>
 <li class="chapter" data-level="12.2.2" data-path="version-control.html"><a href="version-control.html#as-part-of-a-larger-world"><i class="fa fa-check"></i><b>12.2.2</b> As part of a larger world</a></li>
 <li class="chapter" data-level="12.2.3" data-path="version-control.html"><a href="version-control.html#about-git-flow"><i class="fa fa-check"></i><b>12.2.3</b> About <code>git-flow</code></a></li>
@@ -362,7 +362,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="14.2" data-path="need-for-optimization.html"><a href="need-for-optimization.html#tools-for-profiling"><i class="fa fa-check"></i><b>14.2</b> Tools for profiling</a><ul>
 <li class="chapter" data-level="14.2.1" data-path="need-for-optimization.html"><a href="need-for-optimization.html#profiling-r-code"><i class="fa fa-check"></i><b>14.2.1</b> Profiling R code</a></li>
 <li class="chapter" data-level="14.2.2" data-path="need-for-optimization.html"><a href="need-for-optimization.html#profiling-shiny"><i class="fa fa-check"></i><b>14.2.2</b> Profiling <code>{shiny}</code></a></li>
-<li class="chapter" data-level="14.2.3" data-path="need-for-optimization.html"><a href="need-for-optimization.html#more-resources-about-web-page-performance"><i class="fa fa-check"></i><b>14.2.3</b> More resources about web page performance</a></li>
+<li class="chapter" data-level="14.2.3" data-path="need-for-optimization.html"><a href="need-for-optimization.html#more-resources-about-web-page-performance"><i class="fa fa-check"></i><b>14.2.3</b> More resources about web-page performance</a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="15" data-path="common-app-caveats.html"><a href="common-app-caveats.html"><i class="fa fa-check"></i><b>15</b> Common Application Caveats</a><ul>
@@ -381,7 +381,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="15.3.1" data-path="common-app-caveats.html"><a href="common-app-caveats.html#including-data-in-your-application"><i class="fa fa-check"></i><b>15.3.1</b> Including data in your application</a></li>
 <li class="chapter" data-level="15.3.2" data-path="common-app-caveats.html"><a href="common-app-caveats.html#reading-external-datasets"><i class="fa fa-check"></i><b>15.3.2</b> Reading external datasets</a></li>
 <li class="chapter" data-level="15.3.3" data-path="common-app-caveats.html"><a href="common-app-caveats.html#using-external-databases"><i class="fa fa-check"></i><b>15.3.3</b> Using external databases</a></li>
-<li class="chapter" data-level="15.3.4" data-path="common-app-caveats.html"><a href="common-app-caveats.html#data-source-checklist"><i class="fa fa-check"></i><b>15.3.4</b> Data source checklist</a></li>
+<li class="chapter" data-level="15.3.4" data-path="common-app-caveats.html"><a href="common-app-caveats.html#data-source-checklist"><i class="fa fa-check"></i><b>15.3.4</b> Data-source checklist</a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="16" data-path="optimizing-shiny-code.html"><a href="optimizing-shiny-code.html"><i class="fa fa-check"></i><b>16</b> Optimizing <code>{shiny}</code> Code</a><ul>
@@ -407,13 +407,13 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 <li class="chapter" data-level="17.3" data-path="using-javascript.html"><a href="using-javascript.html#client-side-javascript"><i class="fa fa-check"></i><b>17.3</b> Client-side JavaScript</a><ul>
 <li class="chapter" data-level="17.3.1" data-path="using-javascript.html"><a href="using-javascript.html#common-patterns"><i class="fa fa-check"></i><b>17.3.1</b> Common patterns</a></li>
-<li class="chapter" data-level="17.3.2" data-path="using-javascript.html"><a href="using-javascript.html#where-to-put-them-back-to-javascript-events"><i class="fa fa-check"></i><b>17.3.2</b> Where to put them: back to JavaScript Events</a></li>
+<li class="chapter" data-level="17.3.2" data-path="using-javascript.html"><a href="using-javascript.html#where-to-put-them-back-to-javascript-events"><i class="fa fa-check"></i><b>17.3.2</b> Where to put them: Back to JavaScript Events</a></li>
 </ul></li>
 <li class="chapter" data-level="17.4" data-path="using-javascript.html"><a href="using-javascript.html#javascript---shiny-communication"><i class="fa fa-check"></i><b>17.4</b> JavaScript &lt;-&gt; <code>{shiny}</code> communication</a><ul>
 <li class="chapter" data-level="17.4.1" data-path="using-javascript.html"><a href="using-javascript.html#from-r-to-javascript"><i class="fa fa-check"></i><b>17.4.1</b> From R to JavaScript</a></li>
 <li class="chapter" data-level="17.4.2" data-path="using-javascript.html"><a href="using-javascript.html#from-javascript-to-r"><i class="fa fa-check"></i><b>17.4.2</b> From JavaScript to R</a></li>
 </ul></li>
-<li class="chapter" data-level="17.5" data-path="using-javascript.html"><a href="using-javascript.html#about-shinyjs-js-functions"><i class="fa fa-check"></i><b>17.5</b> About <code>{shinyjs}</code> js functions</a></li>
+<li class="chapter" data-level="17.5" data-path="using-javascript.html"><a href="using-javascript.html#about-shinyjs-js-functions"><i class="fa fa-check"></i><b>17.5</b> About <code>{shinyjs}</code> JS functions</a></li>
 <li class="chapter" data-level="17.6" data-path="using-javascript.html"><a href="using-javascript.html#one-last-thing-api-calls"><i class="fa fa-check"></i><b>17.6</b> One last thing: API calls</a></li>
 <li class="chapter" data-level="17.7" data-path="using-javascript.html"><a href="using-javascript.html#learn-more-about-javascript"><i class="fa fa-check"></i><b>17.7</b> Learn more about JavaScript</a><ul>
 <li class="chapter" data-level="17.7.1" data-path="using-javascript.html"><a href="using-javascript.html#shiny-and-javascript"><i class="fa fa-check"></i><b>17.7.1</b> <code>{shiny}</code> and JavaScript</a></li>
@@ -423,7 +423,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="18" data-path="css.html"><a href="css.html"><i class="fa fa-check"></i><b>18</b> A Gentle Introduction to CSS</a><ul>
-<li class="chapter" data-level="18.1" data-path="css.html"><a href="css.html#what-is-css"><i class="fa fa-check"></i><b>18.1</b> What is CSS</a><ul>
+<li class="chapter" data-level="18.1" data-path="css.html"><a href="css.html#what-is-css"><i class="fa fa-check"></i><b>18.1</b> What is CSS?</a><ul>
 <li class="chapter" data-level="18.1.1" data-path="css.html"><a href="css.html#about-css"><i class="fa fa-check"></i><b>18.1.1</b> About CSS</a></li>
 <li class="chapter" data-level="18.1.2" data-path="css.html"><a href="css.html#shinys-default-fluidpage"><i class="fa fa-check"></i><b>18.1.2</b> <code>{shiny}</code>’s default: <code>fluidPage()</code></a></li>
 </ul></li>
@@ -498,7 +498,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <p>A common thing you will hear about <code>{shiny}</code> is that it is a good prototyping tool.
 This cannot be denied.
 Building a Proof of Concept (PoC) for an app is relatively straightforward if you compare to what is needed to build applications in other languages.
-With <code>{shiny}</code>, you can build an “it works on my machine” web application in a couple of hours, and show it to your team, your boss, your investors. Thanks to the way <code>{shiny}</code> was designed, you do not have to care about websockets, ports, HTML (HyperText Markup Language), JavaScript libraries, and all the things that are elegantly bundled into <code>{shiny}</code>.</p>
+With <code>{shiny}</code>, you can build an “it works on my machine” web application in a couple of hours, and show it to your team, your boss, your investors.
+Thanks to the way <code>{shiny}</code> was designed, you do not have to care about websockets, ports, HTML (HyperText Markup Language), JavaScript libraries, and all the things that are elegantly bundled into <code>{shiny}</code>.</p>
 <p>Hence, you can have a quick, hacky application that will work on your machine, and very rapidly.
 But that is not the way you should start.
 Indeed, starting with hacky foundations will lead to two possibilities:</p>
@@ -512,8 +513,7 @@ The larger the codebase, the harder it is to untangle everything and make it wor
 <p>In this book, we will present a framework called <code>{golem}</code>, which is a toolbox for building production-grade <code>{shiny}</code> applications.
 Even if <code>{golem}</code> is focused on production, there is no reason not to use it for your proof of concepts: starting a new <code>{golem}</code> project is relatively straightforward, and even if you do not use the advanced features, you can use it for very small apps.
 The benefit of starting straight inside a <code>{golem}</code> application really outweighs the cost.
-We hear a lot the question “When should I switch to <code>{golem}</code>?”
-The answer is simple: do not switch to <code>{golem}</code>, start with it.
+We hear a lot the question “When should I switch to <code>{golem}</code>?” The answer is simple: do not switch to <code>{golem}</code>, start with it.
 That way, you are getting ready for complexity, and if, one day, you need to turn this small app into a production app, the foundations are there.</p>
 </div>
 <div id="develop-with-the-kiss-principle" class="section level3">
@@ -589,7 +589,7 @@ By defining one person in charge, this “manager” will have to get the whole 
 <p>The project manager will be the one that kicks off the project, and writes the first draft of the application.
 If you follow this book’s workflow, this person will first create a <code>{golem}</code> project, fill in the information, and define the application structure by providing the main modules, and potentially work on the prototyped UI of the app.</p>
 <p>Once the skeleton of the app is created, this person in charge will list all the things that have to be done.
-We strongly suggest that you use Git with a graphical interface (GitLab, GitHub, Bitbucket, etc.) as the graphical interface to help you manage the project.
+We strongly suggest that you use <code>Git</code> with a graphical interface (GitLab, GitHub, Bitbucket, etc.) as the graphical interface to help you manage the project.
 These tasks are defined as issues, and will be closed during development.
 These interfaces can also be used to set continuous integration.</p>
 <p>If the team follows a <code>git flow</code> (described in Chapter <a href="version-control.html#version-control">12</a>), the manager will also be in charge of reviewing and accepting the pull/merge requests to the main <code>dev</code> branch if they solve the associated issues.</p>
